cabal-version:      2.4
name:               challenge-concurrency
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Noah Jones
maintainer:         noahtjones@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    README.md~

library
    exposed-modules:
        Test
        PAB
        Oracle.Funds
        Oracle.Core
        Oracle.Swap
        PAB.RequestPolicies
        PAB.Intake
        PAB.Core
        PAB.CreateRequest
        PAB.Batch

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions:
        DataKinds DeriveAnyClass DeriveGeneric FlexibleContexts
        MultiParamTypeClasses NoImplicitPrelude NumericUnderscores
        OverloadedStrings ScopedTypeVariables TemplateHaskell
        TypeApplications TypeFamilies TypeOperators BangPatterns
        FlexibleInstances MultiWayIf NamedFieldPuns

    build-depends:
        base ^>=4.14.1.0,
        containers ^>=0.6.2.1,
        text ^>=1.2.4.1,
        bytestring ^>=0.10.12.0
        , cardano-api      
        , plutus-core      
        , plutus-ledger    
        , plutus-ledger-api
        , plutus-tx        
        , serialise        

    hs-source-dirs:   src
    default-language: Haskell2010

executable challenge-concurrency
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-extensions:
        DataKinds DeriveAnyClass DeriveGeneric FlexibleContexts
        MultiParamTypeClasses NoImplicitPrelude NumericUnderscores
        OverloadedStrings ScopedTypeVariables TemplateHaskell
        TypeApplications TypeFamilies TypeOperators BangPatterns
        FlexibleInstances MultiWayIf NamedFieldPuns

    build-depends:
          base ^>=4.14.1.0
        , containers ^>=0.6.2.1
        , text ^>=1.2.4.1
        , bytestring ^>=0.10.12.0
        , cardano-api      
        , plutus-core      
        , plutus-ledger    
        , plutus-ledger-api
        , plutus-tx        
        , serialise        

    hs-source-dirs:   app
    default-language: Haskell2010
